@@ -1,3 +1,8 @@
+2014-10-24 Martin <tripiana@cern.ch>
+	* Add overlap removal option to jO.
+	* Fix store cleaning when running in genPU mode.
+	
+
 2014-10-21 Martin <tripiana@cern.ch>
 	* Move to Base,2.0.14
 	* New MET re-building in ST
